<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="planok.cl.android.pvi.SeleccionProyectos">

    <TextView
        android:id="@+id/textView3"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_proyecto"
        android:layout_above="@+id/spinner_seleccion_proyectos"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Spinner
        android:id="@+id/spinner_seleccion_proyectos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView2"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_etapa"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/spinner_seleccion_etapa"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/spinner_seleccion_etapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/textView"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_propiedad"
        android:layout_below="@+id/spinner_seleccion_etapa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinner_seleccion_propiedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/ir_menu_inicial"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_entregar"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/ir_entrega_terceros" />

    <Button
        android:id="@+id/ir_entrega_terceros"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_entregar_tercero"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/Red"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_plan_ok"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
